<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LoginPageFragment">

    <TextView android:text="@string/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"/>

    <TextView android:text="@string/desc_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15dp"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:gravity="center_vertical"
                android:text="@string/email"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/etLgnEmail"
                android:layout_weight="3"
                android:hint="@string/email_hint"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvEmailErrMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textSize="8dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="center_vertical"
            android:text="@string/password"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/etLgnPassword"
            android:layout_weight="3"
            android:hint="@string/password_hint"
            android:layout_width="0dp"
            android:layout_height="match_parent" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvPswdErrMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textSize="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbRmbMe"
            android:gravity="center_vertical"
            android:text="@string/remember_me"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_weight="1"
            android:hint="@string/forgot_password"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/btnLogin"
        android:text="@string/login_for_btn">


    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_title"
        android:textSize="15dp"
        android:layout_gravity="center"
        />

    <Button
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_btn"
        android:id="@+id/btnRegister"/>

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_right_desc"/>

</LinearLayout>
