<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.robertlimantoproject.madebygue.activity.RegisterPageFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_title"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reg_page_title"
        android:textSize="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/reg_name" />

                    <EditText
                        android:id="@+id/etRegName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:hint="@string/reg_name_hint" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_gravity="right">

                    <TextView
                        android:id="@+id/tvRegNameErr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:gravity="right"
                        android:textColor="#FF0000"
                        android:textSize="8dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/reg_handphone" />

                    <EditText
                        android:id="@+id/etRegHP"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:hint="@string/reg_handphone_hint" />
                </TableRow>


                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/reg_address" />

                    <EditText
                        android:id="@+id/etRegAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:hint="@string/reg_address_hint" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/reg_email" />

                    <EditText
                        android:id="@+id/etRegEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:hint="@string/reg_email_hint" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_gravity="right">

                    <TextView
                        android:id="@+id/tvRegEmailErr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:gravity="right"
                        android:textColor="#FF0000"
                        android:textSize="8dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/reg_password" />

                    <EditText
                        android:id="@+id/etRegPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:hint="@string/reg_password_hint" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_gravity="right">

                    <TextView
                        android:id="@+id/tvRegPswdErr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:gravity="right"
                        android:textColor="#FF0000"
                        android:textSize="8dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/reg_cfm_pswd" />

                    <EditText
                        android:id="@+id/etRefCfmPswd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:hint="@string/reg_cfm_pswd_hint" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_gravity="right">

                    <TextView
                        android:id="@+id/tvRegCfmErr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:gravity="right"
                        android:textColor="#FF0000"
                        android:textSize="8dp" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/btnRegRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reg_reg_btn" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
