<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.robertlimantoproject.madebygue.activity.IdGuePageFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#FFFFFF"
        android:layout_margin="10dp"
        >
        <ImageView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/userdefault"
            android:layout_alignBottom="@+id/but2" />

        <Button android:id="@+id/but2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="upload"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
                />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:text="@string/ig_name"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tvIGName"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                </TableRow>


                <TableRow>
                    <TextView
                        android:text="@string/ig_address"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tvIGAddress"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                </TableRow>


                <TableRow>
                    <TextView
                        android:text="@string/ig_email"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tvIGEmail"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                </TableRow>





                <TableRow>
                    <TextView
                        android:text="@string/ig_handphone"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tvIGPhone"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/tvValidated"
                android:text="@string/ig_not_validated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button android:id="@+id/btnIGValidate"
                android:text="@string/ig_validate_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btnIGChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ig_change"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:text="@string/btn_ig_distro"
                       android:id="@+id/btnIGDistro"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <Button
                    android:text="@string/btn_ig_deposit"
                    android:id="@+id/btnIGDeposit"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>


            <Button
                android:text="@string/btn_ig_klik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnIGFreeTShirt"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
