<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.robertlimantoproject.madebygue.activity.ValidateEmailPageFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvAnnouncement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        />
    <Button
        android:id="@+id/btnVEValLater"
        android:text="@string/ve_validate_later" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnVEResend"
        android:text="@string/ve_resend" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnVEDone"
        android:text="@string/ve_done" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
