<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/name_default"
        android:id="@+id/tvDCUserFullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageButton
        android:src="@drawable/userdefault"
        android:id="@+id/ivDCClothPic"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:text="@string/sold_default"
            android:id="@+id/tvDCSold"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"/>

        <TextView
            android:gravity="center"
            android:text="@string/like_default"
            android:id="@+id/tvDCLiked"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>