<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.robertlimantoproject.madebygue.activity.EditProfilePageFragment"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20dp"
                android:text="@string/ep_name"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                />

            <EditText
                android:id="@+id/etEPName"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/ep_address"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                />

            <EditText
                android:id="@+id/etEPAddress"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/ep_handphone"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                />

            <EditText
                android:id="@+id/etEPHandphone"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                />
        </TableRow>
    </TableLayout>

    <Button
        android:text="@string/btn_ep_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEPSave"/>
</LinearLayout>
